Learning HTML pt. I
Just fucking around with bold and shit.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-hello world
+<p>Hi! My name is <strong>Aziza</strong> and I like <em>sarcasm</em>.</p>
+<p>Here are <strong>other</strong> things you should know about me: I think babies are <em>pretty</em> great. Also, <strong>dogs</strong>, showtunes, and <em>not wearing pants</em>.</p>
+<h1>Additional paragraphs!</h1>
