--- a/index.html
+++ b/index.html
@@ -1,3 +1,20 @@
+<html>
+<head>
+  <title>THIS IS MY PAGE /allcaps</title>
+</head>
+<body>
 <p>Hi! My name is <strong>Aziza</strong> and I like <em>sarcasm</em>.</p>
 <p>Here are <strong>other</strong> things you should know about me: I think babies are <em>pretty</em> great. Also, <strong>dogs</strong>, showtunes, and <em>not wearing pants</em>.</p>
-<h1>Additional paragraphs!</h1>
+<h1>The <em>Benefits</em> of <em>Not Wearing Pants</em></h1>
+<h2>in a nice list*</h2>
+<h3>*unordered</h3>
+<ul>
+  <li>nakedness</li>
+  <li>freedom</li>
+  <li>comfort/breeziness</li>
+  <li>the man is not telling you what to wear</li>
+  <li>fresh air on your nether regions*</li>
+</ul>
+
+</body>
+</html>
