Uppin' that HTML biz
Using pics and shit

--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
 </head>
 <body>
 <p>Hi! My name is <strong>Aziza</strong> and I like <em>sarcasm</em>.</p>
-<p>Here are <strong>other</strong> things you should know about me: I think babies are <em>pretty</em> great. Also, <strong>dogs</strong>, showtunes, and <em>not wearing pants</em>.</p>
+<p>Here are <strong>other</strong> things you should know about me:
+  I think babies are <em>pretty</em> great.
+  Also, <strong>dogs</strong>, showtunes, and
+  <em>not wearing pants</em>. It is important to note
+  I am only wearing pants in the picture below
+  <em>because of society</em>.</p>
+  <img src="https://scontent-yyz1-1.xx.fbcdn.net/v/t1.0-9/1528534_10208776089101613_2279729715785571922_n.jpg?oh=34a6f424628e717fadc7f643f066e7a1&oe=57C2BCD5"
+  alt="Aziza's Profile Picture"
+  width="300" height="300"</img>
 <h1>The <em>Benefits</em> of <em>Not Wearing Pants</em></h1>
 <h2>in a nice list*</h2>
 <h3>*unordered</h3>
@@ -12,9 +20,8 @@
   <li>nakedness</li>
   <li>freedom</li>
   <li>comfort/breeziness</li>
-  <li>the man is not telling you what to wear</li>
-  <li>fresh air on your nether regions*</li>
+  <li>the man is not telling you <a href="http://www.tlc.com/tv-shows/what-not-to-wear/videos/rule-1/">what to wear</a></li>
+  <li>fresh <a href="http://imgur.com/mTSu9Gd">air</a> on your nether regions*</li>
 </ul>
-
 </body>
 </html>
