--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <html>
 <head>
   <title>THIS IS MY PAGE /allcaps</title>
+  <style>h1 {
+    color: pink
+  }
+  a {
+    color: #e35205
+  }</style>
 </head>
 <body>
 <p>Hi! My name is <strong>Aziza</strong> and I like <em>sarcasm</em>.</p>
@@ -23,5 +29,8 @@
   <li>the man is not telling you <a href="http://www.tlc.com/tv-shows/what-not-to-wear/videos/rule-1/">what to wear</a></li>
   <li>fresh <a href="http://imgur.com/mTSu9Gd">air</a> on your nether regions*</li>
 </ul>
+<img src="http://i.dailymail.co.uk/i/pix/2013/11/16/article-2508490-19753BE200000578-883_634x607.jpg"
+alt="Puppy with Small Child"
+ width="150" height="150"/img>
 </body>
 </html>
