--- a/ACME-SignUp.html
+++ b/ACME-SignUp.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ACME Corp - Home</title>
+    <title>ACME Corp - Sign Up</title>
     <style media="screen">
     body {
       background-image: url(http://f.cl.ly/items/3C0W1n1t1s0P1Z0w131r/background.png);
@@ -13,6 +13,13 @@
       padding: 20px;
       border: solid 1px black;
     }
+    .logo {
+      width: 250px;
+    }
+    a {
+      text-decoration: none;
+      color: white;
+    }
     nav {
       float: right;
       font-family: "Lucida Grande";
@@ -23,6 +30,7 @@
     li {
       display: inline;
       padding: 10px;
+      vertical-align: middle;
     }
     main {
       margin-left: auto;
@@ -31,7 +39,7 @@
       border-radius: 8px;
       padding: 30px;
       box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-      width: 800px;
+      width: 600px;
     }
     .button {
       background-color: rgb(51,60,181);
@@ -49,17 +57,17 @@
       color: rgb(154,154,154);
       font-size: .7em;
       border-top: 1px solid gray;
-      width: 850px;
+      width: 650px;
     }
     </style>
   </head>
   <body>
     <header>
-      <a href="http://acme.com/"><img src="http://f.cl.ly/items/05361u3R0D3i1c2y2203/acme-corp.jpg"
-      alt="ACME Corp logo" class="logo" style="width:250px"/></a>
+      <img src="http://f.cl.ly/items/05361u3R0D3i1c2y2203/acme-corp.jpg"
+      alt="ACME Corp logo" class="logo"/>
         <nav>
           <ul>
-            <li><a href="file:///Users/Aziza/Documents/FEWD/ACME-Products.html" style="color:white;text-decoration:none">Products</a></li>
+            <li><a href="file:///Users/Aziza/Documents/FEWD/ACME-Products.html">Products</a></li>
             <li><a href="file:///Users/Aziza/Documents/FEWD/ACME-SignUp.html" class="button">
               Sign Up</a></li>
           </ul>
