Updating Links Again
Working across the board, probably.

--- a/ACME-SignUp.html
+++ b/ACME-SignUp.html
@@ -67,8 +67,8 @@
       alt="ACME Corp logo" class="logo"/>
         <nav>
           <ul>
-            <li><a href="file:///Users/Aziza/Documents/FEWD/ACME-Products.html">Products</a></li>
-            <li><a href="file:///Users/Aziza/Documents/FEWD/ACME-SignUp.html" class="button">
+            <li><a href="https://azizamistral.github.io/FEWD/ACME-Products.html">Products</a></li>
+            <li><a href="https://azizamistral.github.io/FEWD/ACME-SignUp.html" class="button">
               Sign Up</a></li>
           </ul>
         </nav>
