--- a/ACME/index.html
+++ b/ACME/index.html
@@ -59,8 +59,8 @@
       alt="ACME Corp logo" class="logo" style="width:250px"/></a>
         <nav>
           <ul>
-            <li><a href="https://azizamistral.github.io/FEWD/ACME-Products.html" style="color:white;text-decoration:none">Products</a></li>
-            <li><a href="https://azizamistral.github.io/FEWD/ACME-SignUp.html" class="button">
+            <li><a href="https://azizamistral.github.io/FEWD/ACME/Products.html" style="color:white;text-decoration:none">Products</a></li>
+            <li><a href="https://azizamistral.github.io/FEWD/ACME/SignUp.html" class="button">
               Sign Up</a></li>
           </ul>
         </nav>
