New Folders & Images Added

--- a/ACME/Products.html
+++ b/ACME/Products.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ACME Corp - Sign Up</title>
+    <title>ACME Corp - Products</title>
     <style media="screen">
     body {
       background-image: url(http://f.cl.ly/items/3C0W1n1t1s0P1Z0w131r/background.png);
