--- a/ACME/index.html
+++ b/ACME/index.html
@@ -55,7 +55,7 @@
   </head>
   <body>
     <header>
-      <a href="http://acme.com/"><img src="http://f.cl.ly/items/05361u3R0D3i1c2y2203/acme-corp.jpg"
+      <a href="http://acme.com/"><img src="https://azizamistral.github.io/FEWD/ACME/images/acme-corp.jpg"
       alt="ACME Corp logo" class="logo" style="width:250px"/></a>
         <nav>
           <ul>
