--- a/ACME/Products.html
+++ b/ACME/Products.html
@@ -1,65 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="base" href="products.css" media="screen" title="no title" charset="utf-8">
+    <link rel="products" href="/css/master.css" media="screen" title="no title" charset="utf-8">
     <title>ACME Corp - Products</title>
-    <style media="screen">
-    body {
-      background-image: url(http://f.cl.ly/items/3C0W1n1t1s0P1Z0w131r/background.png);
-      font-family: "Lucida Grande";
-      margin: 0px;
-    }
-    header {
-      background-color: rgb(196,196,196);
-      padding: 20px;
-      border: solid 1px black;
-    }
-    .logo {
-      width: 250px;
-    }
-    a {
-      text-decoration: none;
-      color: white;
-    }
-    nav {
-      float: right;
-      font-family: "Lucida Grande";
-      font-size: 16px;
-      color: white;
-      text-shadow: 1px 1px black;
-    }
-    li {
-      display: inline;
-      padding: 10px;
-      vertical-align: middle;
-    }
-    main {
-      margin-left: auto;
-      margin-right: auto;
-      background-color: white;
-      border-radius: 8px;
-      padding: 30px;
-      box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-      width: 800px;
-    }
-    .button {
-      background-color: rgb(51,60,181);
-      color: white;
-      font-size: 16px;
-      border: none;
-      padding: 10px 20px;
-      border-radius: 4px;
-      text-decoration: none;
-    }
-    footer {
-      margin-left: auto;
-      margin-right: auto;
-      text-align: center;
-      color: rgb(154,154,154);
-      font-size: .7em;
-      border-top: 1px solid gray;
-      width: 850px;
-    }
-    </style>
   </head>
   <body>
     <header>
