Attached ext. CSS & Resized Logo

--- a/ACME/index.html
+++ b/ACME/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="base" href="css/base.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="css/base.css" media="screen" title="no title" charset="utf-8">
     <title>ACME Corp - Home</title>
   </head>
   <body>
