--- a/ACME/Products.html
+++ b/ACME/Products.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="base" href="css/base.css" media="screen" title="no title" charset="utf-8">
-    <link rel="products" href="css/products.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="css/base.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="css/products.css" media="screen" title="no title" charset="utf-8">
     <title>ACME Corp - Products</title>
   </head>
   <body>
