--- a/ACME/SignUp.html
+++ b/ACME/SignUp.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="base" href="css/base.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="css/base.css" media="screen" title="no title" charset="utf-8">
     <title>ACME Corp - Sign Up</title>
+
   </head>
   <body>
     <header>
