Linked & Resized Logo

--- a/ACME/index.html
+++ b/ACME/index.html
@@ -7,7 +7,7 @@
   <body>
     <header>
       <a href="http://acme.com/"><img src="https://azizamistral.github.io/FEWD/ACME/images/acme-corp.jpg"
-      alt="ACME Corp logo" class="logo" style="width:250px"/></a>
+      alt="ACME Corp logo" class="logo"/></a>
         <nav>
           <ul>
             <li><a href="https://azizamistral.github.io/FEWD/ACME/Products.html" style="color:white;text-decoration:none">Products</a></li>
