--- a/ACME/SignUp.html
+++ b/ACME/SignUp.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <header>
-      <img src="http://f.cl.ly/items/05361u3R0D3i1c2y2203/acme-corp.jpg"
-      alt="ACME Corp logo" class="logo"/>
+      <a href="http://acme.com/"><img src="https://azizamistral.github.io/FEWD/ACME/images/acme-corp.jpg"
+      alt="ACME Corp logo" class="logo"/></a>
         <nav>
           <ul>
             <li><a href="https://azizamistral.github.io/FEWD/ACME/Products.html">Products</a></li>
