--- a/ACME/SignUp.html
+++ b/ACME/SignUp.html
@@ -21,14 +21,20 @@
       <br>
       <br>
       <main>
-        <h1>Welcome to ACME Corp!</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-          incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-          nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-          fugiat nulla pariatur.</p>
-        <p>Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.</p>
+        <h1>Sign Up</h1>
+        <p><label for="fname">First Name</label> <input type="text" name="fname" value="John"><br>
+           <label for="lname">Last Name</label> <input type="text" name="lname" value="Doe"><br>
+           <label for="email">Email</label> <input type="email" name="email" value="john.doe@example.com" autocomplete="on"><br>
+           <label for="password">Password</label> <input type="text" name="password" value=""><br>
+           How did you hear about us?<br>
+            <select required>
+              <option value="">Pick one...</option>
+              <option value="Friend">Friend</option>
+              <option value="Advertisement">Advertisement</option>
+            </select><br>
+           <input type="checkbox" value="agree"> Agree to our terms of service<br>
+           <input type="submit" value="Sign Up">
+        </p>
       </main>
       <br>
       <br>
