--- a/ACME/Products.html
+++ b/ACME/Products.html
@@ -24,8 +24,25 @@
         <h1>Products</h1>
         <p>For a complete list of products, please visit the Original Illustrated
            Catalog of ACME Products.</p>
-        <p>Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p><img src="images/acmecheese.jpg" alt="acme_cheese" class="product_img"/>
+          <div class="product">Despite the picture shown here, ACME Cheese Co.
+          does NOT have a mouse problem.</div><br>
+          <button type="button" class="deet_butt">Details</button>
+          <button type="button" class="cart_butt">Add to Cart</button>
+        </p>
+        <p><img src="images/acmestrait.jpg" alt="acme_strait" class="product_img"/>
+           <div class="product">Because you definitely need the <strong>ACME Straight-Jackect-Ejecting Bazooka</strong>
+           to protect your property (from unruly hares, idk), and anyone who
+           says otherwise is trampling on your rights.</div><br>
+          <button type="button" class="deet_butt">Details</button>
+          <button type="button" class="cart_butt">Add to Cart</button>
+        </p>
+        <p><img src="images/stovelid.jpg" alt="stove_lid" class="product_img"/>
+          <div class="product"><strong>The ACME Stovelid.</strong><em> Why don't
+             you have a lid on your stove?<sup>&#169</sup></em></div><br>
+          <button type="button" class="deet_butt">Details</button>
+          <button type="button" class="cart_butt">Add to Cart</button>
+        </p>
       </main>
       <br>
       <br>
