--- a/ACME/Products.html
+++ b/ACME/Products.html
@@ -38,7 +38,7 @@
           <button type="button" class="cart_butt">Add to Cart</button>
         </p>
         <p><img src="images/stovelid.jpg" alt="stove_lid" class="product_img"/>
-          <div class="product"><strong>The ACME Stovelid.</strong><em> Why don't
+          <div class="product"><strong>The ACME Stovelid:</strong><em> Why don't
              you have a lid on your stove?<sup>&#169</sup></em></div><br>
           <button type="button" class="deet_butt">Details</button>
           <button type="button" class="cart_butt">Add to Cart</button>
