Finished Products Page

--- a/ACME/Products.html
+++ b/ACME/Products.html
@@ -22,27 +22,30 @@
       <br>
       <main>
         <h1>Products</h1>
-        <p>For a complete list of products, please visit the Original Illustrated
-           Catalog of ACME Products.</p>
-        <p><img src="images/acmecheese.jpg" alt="acme_cheese" class="product_img"/>
-          <div class="product">Despite the picture shown here, ACME Cheese Co.
-          does NOT have a mouse problem.</div><br>
+        <p>For a complete list of products, please visit the <a href="http://acme.com/catalog/">
+          Original Illustrated Catalog of ACME Products</a>.</p>
+        <div class="product"><p><img src="images/acmecheese.jpg" alt="acme_cheese" class="product_img"/>
+          Despite the picture shown here, ACME Cheese Co.
+          does NOT have a mouse problem.<br>
+          <br>
           <button type="button" class="deet_butt">Details</button>
           <button type="button" class="cart_butt">Add to Cart</button>
-        </p>
-        <p><img src="images/acmestrait.jpg" alt="acme_strait" class="product_img"/>
-           <div class="product">Because you definitely need the <strong>ACME Straight-Jackect-Ejecting Bazooka</strong>
+        </p></div>
+        <div class="product"><p><img src="images/acmestrait.jpg" alt="acme_strait" class="product_img"/>
+           Because you definitely need the <strong>ACME Straight-Jackect-Ejecting Bazooka</strong>
            to protect your property (from unruly hares, idk), and anyone who
-           says otherwise is trampling on your rights.</div><br>
+           says otherwise is trampling on your rights.<br>
+           <br>
           <button type="button" class="deet_butt">Details</button>
           <button type="button" class="cart_butt">Add to Cart</button>
-        </p>
-        <p><img src="images/stovelid.jpg" alt="stove_lid" class="product_img"/>
-          <div class="product"><strong>The ACME Stovelid:</strong><em> Why don't
-             you have a lid on your stove?<sup>&#169</sup></em></div><br>
+        </p></div>
+        <div class="product"><p><img src="images/stovelid.jpg" alt="stove_lid" class="product_img"/>
+          <strong>The ACME Stovelid:</strong><em> Why don't
+             you have a lid on your stove?<sup>&#169</sup></em><br>
+             <br>
           <button type="button" class="deet_butt">Details</button>
           <button type="button" class="cart_butt">Add to Cart</button>
-        </p>
+        </p></div>
       </main>
       <br>
       <br>
