--- a/ACME/index.html
+++ b/ACME/index.html
@@ -6,12 +6,12 @@
   </head>
   <body>
     <header>
-      <a href="http://acme.com/"><img src="https://azizamistral.github.io/FEWD/ACME/images/acme-corp.jpg"
+      <a href="http://acme.com/"><img src="images/acme-corp.jpg"
       alt="ACME Corp logo" class="logo"/></a>
         <nav>
           <ul>
-            <li><a href="https://azizamistral.github.io/FEWD/ACME/Products.html" style="color:white;text-decoration:none">Products</a></li>
-            <li><a href="https://azizamistral.github.io/FEWD/ACME/SignUp.html" class="button">
+            <li><a href="Products.html" style="color:white;text-decoration:none">Products</a></li>
+            <li><a href="SignUp.html" class="button">
               Sign Up</a></li>
           </ul>
         </nav>
