--- a/ACME/Products.html
+++ b/ACME/Products.html
@@ -7,12 +7,12 @@
   </head>
   <body>
     <header>
-      <a href="http://acme.com/"><img src="https://azizamistral.github.io/FEWD/ACME/images/acme-corp.jpg"
+      <a href="http://acme.com/"><img src="images/acme-corp.jpg"
       alt="ACME Corp logo" class="logo"/></a>
         <nav>
           <ul>
-            <li><a href="https://azizamistral.github.io/FEWD/ACME/Products.html">Products</a></li>
-            <li><a href="https://azizamistral.github.io/FEWD/ACME/SignUp.html" class="button">
+            <li><a href="Products.html">Products</a></li>
+            <li><a href="SignUp.html" class="button">
               Sign Up</a></li>
           </ul>
         </nav>
