ACME HW: Sign Up base html
also positioning in class

--- a/ACME/Products.html
+++ b/ACME/Products.html
@@ -17,15 +17,12 @@
           </ul>
         </nav>
       </header>
-      <br>
-      <br>
-      <br>
       <main>
         <h1>Products</h1>
         <p>For a complete list of products, please visit the <a href="http://acme.com/catalog/">
           Original Illustrated Catalog of ACME Products</a>.</p>
         <div class="product"><p><img src="images/acmecheese.jpg" alt="acme_cheese" class="product_img"/>
-          Despite the picture shown here, ACME Cheese Co.
+          Despite the picture shown here, <strong>ACME Cheese Co.</strong>
           does NOT have a mouse problem.<br>
           <br>
           <button type="button" class="deet_butt">Details</button>
@@ -41,15 +38,12 @@
         </p></div>
         <div class="product"><p><img src="images/stovelid.jpg" alt="stove_lid" class="product_img"/>
           <strong>The ACME Stovelid:</strong><em> Why don't
-             you have a lid on your stove?<sup>&#169</sup></em><br>
+             you have a lid on <strong>your</strong> stove?<sup> &#169</sup></em><br>
              <br>
           <button type="button" class="deet_butt">Details</button>
           <button type="button" class="cart_butt">Add to Cart</button>
         </p></div>
       </main>
-      <br>
-      <br>
-      <br>
       <footer>
         <p>Copyright, 2015</p>
       </footer>
