Changed Logo Destination
Made input boxes round kinda

--- a/ACME/SignUp.html
+++ b/ACME/SignUp.html
@@ -15,6 +15,7 @@
       .text_input {
         width: 200px;
         border: 2px solid black;
+        border-radius: 2px;
       }
       .text_input:invalid {
         border: 2px solid red;
@@ -31,7 +32,7 @@
   </head>
   <body>
     <header>
-      <a href="http://acme.com/"><img src="images/acme-corp.jpg"
+      <a href="index.html"><img src="images/acme-corp.jpg"
       alt="ACME Corp logo" class="logo"/></a>
         <nav>
           <ul>
