--- a/ACME/Products.html
+++ b/ACME/Products.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-      <a href="http://acme.com/"><img src="images/acme-corp.jpg"
+      <a href="index.html"><img src="images/acme-corp.jpg"
       alt="ACME Corp logo" class="logo"/></a>
         <nav>
           <ul>
