--- a/ACME/SignUp.html
+++ b/ACME/SignUp.html
@@ -47,7 +47,7 @@
           <form class="SignUp" action="index.html" method="get">
             <div class="form-row">
               <label for="fname">First name:</label>
-              <input class="text_input" placeholder="John" id="fname" type="text" name="first-name" required>
+              <input class="text_input" placeholder="John" autofocus id="fname" type="text" name="first-name" required>
             </div>
             <div class="form-row">
               <label for="lname">Last name:</label>
