--- a/index.html
+++ b/index.html
@@ -6,7 +6,28 @@
   }
   a {
     color: #e35205
-  }</style>
+  }
+  .button {
+    display: block;
+    border:1px solid #576AB5;-webkit-box-shadow: #B2BEF7 3px 3px 3px  ;-moz-box-shadow: #B2BEF7 3px 3px 3px ; box-shadow: #B2BEF7 3px 3px 3px  ; -webkit-border-radius: 1px; -moz-border-radius: 1px;border-radius: 1px;font-size:12px;font-family:times new roman, times, serif; padding: 8px 8px 8px 8px; text-decoration:none; display:inline-block;text-shadow: -1px -1px 0 rgba(41,20,227,0.3);font-weight:bold; color: #FFFFFF;
+    background-color: #0828C9; background-image: -webkit-gradient(linear, left top, left bottom, from(#0828C9), to(#6068D6));
+    background-image: -webkit-linear-gradient(top, #0828C9, #6068D6);
+    background-image: -moz-linear-gradient(top, #0828C9, #6068D6);
+    background-image: -ms-linear-gradient(top, #0828C9, #6068D6);
+    background-image: -o-linear-gradient(top, #0828C9, #6068D6);
+    background-image: linear-gradient(to bottom, #0828C9, #6068D6);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#0828C9, endColorstr=#6068D6);
+  }
+
+  .button:hover{
+    border:2px solid #041467;
+    background-color: #070463; background-image: -webkit-gradient(linear, left top, left bottom, from(#070463), to(#3741cc));
+    background-image: -webkit-linear-gradient(top, #070463, #3741cc);
+    background-image: -moz-linear-gradient(top, #070463, #3741cc);
+    background-image: -ms-linear-gradient(top, #070463, #3741cc);
+    background-image: -o-linear-gradient(top, #070463, #3741cc);
+    background-image: linear-gradient(to bottom, #070463, #3741cc);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#070463, endColorstr=#3741cc);
+  }
+  </style>
 </head>
 <body>
 <p>Hi! My name is <strong>Aziza</strong> and I like <em>sarcasm</em>.</p>
@@ -32,5 +53,6 @@
 <img src="http://i.dailymail.co.uk/i/pix/2013/11/16/article-2508490-19753BE200000578-883_634x607.jpg"
 alt="Puppy with Small Child"
  width="150" height="150"/img>
+<button display="block" type="button" class="button">Hammer Time</button>
 </body>
 </html>
