--- a/Practice Shit/jsblog/practice.html
+++ b/Practice Shit/jsblog/practice.html
@@ -1,72 +1,101 @@
+<!DOCTYPE html>
 <html>
   <head>
-    <title>Blog</title>
-
-    <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
+    <meta charset="utf-8">
+    <title>Todo List</title>
   </head>
   <body>
     <main>
-      <article>
-        <h1>The Challenges of Programming</h1>
-
-        <p>
-          Programming can be tough...
-          lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-          incididunt ut labore et dolore magna aliqua.
-        </p>
-
-        <ul>
-          <li>lorem</li>
-          <li>ipsum</li>
-          <li>dolor</li>
-        </ul>
-
-        <p>
-          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-          mollit anim id est laborum.
-        </p>
-      </article>
-
-      <div class="like">
-        <a href="#" class="like-link">Like</a>
-        (<span class="like-count">0</span>)
-      </div>
-
-      <div id="comments">
-        <!--
-        <div class="comment">
-          You're looking good!
-        </div>
-        -->
-      </div>
-
-      <form id="new-comment">
-        <textarea id="new-comment-body" placeholder="Leave a comment..."></textarea>
-        <button type="submit">Comment</button>
+      <form id="new-item-form">
+        <input type="text" id="new-item-input" class="buttonish" placeholder="DO U NEED GROCEREEZ?" autofocus required>
+        <button class="buttonish" type="submit">EAT.</button>
       </form>
+
+      <ul id="todo-list">
+      </ul>
     </main>
   </body>
 </html>
 
+<style>
+* { box-sizing: border-box; }
+
+body {
+  margin: 0;
+  background: #f1f0f5;
+  font-family: sans-serif;
+  font-size: 18px;
+  line-height: 1.4em;
+}
+
+main {
+  margin: 2em auto;
+  box-shadow: 0 5px 30px rgba(0, 0, 0, 0.2);
+  background: white;
+  padding: 2em 3em;
+  max-width: 600px;
+  border-radius: 5px;
+}
+
+label {
+  cursor: pointer;
+}
+
+.buttonish {
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-bottom-width: 2px;
+  border-radius: 5px; font-size: inherit;
+  padding: .5em 1em;
+  cursor: pointer;
+}
+
+#new-item-input {
+  width: 70%;
+}
+
+button {
+  color: white;
+  width: 28%;
+  background-color: #049cd8;
+}
+
+#todo-list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+#todo-list li {
+  margin-top: 0.75em;
+  padding-top: 0.75em;
+}
+
+input[type="checkbox"] {
+  margin-right: 1em;
+}
+input:checked + span {
+  opacity: 0.2;
+  text-decoration: line-through;
+}
+</style>
 
 <script type="text/javascript">
-  var link = document.querySelector(".like-link")
-  var form = document.querySelector("#new-comment")
+  var form = document.querySelector("#new-item-form");
+  var input = document.querySelector("#new-item-input");
+  var list = document.querySelector("#todo-list");
 
-  link.addEventListener("click", like)
-  form.addEventListener("submit", comment)
+  function doThisThing() {
+    var li = document.createElement("li");
+    var label = document.createElement("label");
+    var checkbox = document.createElement("input");
+    var span = document.createElement("span");
 
-  function like(event) {
-    event.preventDefault();
-    var count = document.querySelector(".like-count")
-    var likes = parseInt(count.textContent)
-    likes.textContent = likes + 1;
+    list.appendChild(li).appendChild(label);
+    label.appendChild(span).textContent = input.value;
+    span.appendChild(checkbox).setAttribute("type","checkbox");
+
+    form.reset ();
   }
 
-  function comment(event) {
-    event.preventDefault();
-    var kindWords = document.querySelector()
-  }
-
+    form.addEventListener("submit", doThisThing);
 
 </script>
