--- a/todo-list-jquery/index.html
+++ b/todo-list-jquery/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <title>Todo List</title>
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
@@ -9,7 +10,7 @@
     <main>
       <form id="new-item-form">
         <input type="text" id="new-item-input" class="buttonish" placeholder="WAT U NEED (to do)?" autofocus required>
-        <button class="buttonish" type="submit">LIST YOUR SHIT.</button>
+        <button class="buttonish" type="submit">LIST SHIT.</button>
       </form>
 
       <ul id="todo-list">
